Fix overflow and bailing

--- a/src/components/MarkdownEditor/style.scss
+++ b/src/components/MarkdownEditor/style.scss
@@ -33,6 +33,7 @@
     width: 100%;
     background-color: $clouds;
     padding: 20px;
+    overflow: auto;
 
     table {
       border-spacing: 0;
